@@ -1,18 +1,21 @@
 package com.qqueueing.main.waiting.service;
 
 
+import com.qqueueing.main.registration.model.Registration;
+import com.qqueueing.main.registration.repository.RegistrationRepository;
+import com.qqueueing.main.waiting.model.BatchResDto;
 import com.qqueueing.main.waiting.model.GetMyOrderResDto;
-import com.qqueueing.main.waiting.model.TestDto;
+import com.qqueueing.main.waiting.model.WaitingStatusDto;
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -22,81 +25,175 @@ public class WaitingService {
 
     private final ConsumerConnector consumerConnector;
     private final TargetApiConnector targetApiConnector;
-
     private final EnterProducer enterProducer;
-    private final String TARGET_URL;
-    private Set<String> doneSet = new HashSet<>();
-    private List<Long> outList = new LinkedList<>();
-    private Integer batchLastIdx = 2;
-    private Long target_capacity = 2000L;
-    private Integer totalQueueSize = 5000;
-    private Long tmpEnterCnt = 0L;
+    private final RegistrationRepository registrationRepository;
 
+    private Set<Integer> activePartitions = new HashSet<>();
+    private Map<Integer, WaitingStatusDto> queues = new HashMap<>();
+    private Map<String, Integer> partitionNoMapper = new HashMap<>();
 
-    public WaitingService(ConsumerConnector consumerConnector, TargetApiConnector targetApiConnector, EnterProducer enterProducer,
-                          @Value("${servers.target.url}") String targetApiUrl) {
+    public WaitingService(ConsumerConnector consumerConnector, TargetApiConnector targetApiConnector,
+                          EnterProducer enterProducer, RegistrationRepository registrationRepository){
         this.consumerConnector = consumerConnector;
         this.targetApiConnector = targetApiConnector;
         this.enterProducer = enterProducer;
-//        this.producerConnector = producerConnector;
-        this.TARGET_URL = targetApiUrl;
+        this.registrationRepository = registrationRepository;
     }
 
-    public TestDto enter(String clientIp) {
-        tmpEnterCnt++;
-
-        // 카프카에 요청자 Ip 저장
-        return enterProducer.send(clientIp);
+    /**
+     * 대기열 서버가 비정상 종료 후 다시 켜질 때, 대기열을 다시 활성화
+     */
+    @PostConstruct
+    public void initQueues() {
+        List<Registration> queues = registrationRepository.findAll();
+        queues.forEach(r -> {
+                    partitionNoMapper.put(r.getTargetUrl(), r.getPartitionNo());
+                    if (r.getIsActive()) activate(r);
+                });
     }
 
-    public void out(Long order) {
+    @PreDestroy
+    public void offQueues() {
+//        List<Registration> queues = registrationRepository.findAll();
+//        queues.stream()
+//                .filter(Registration::isActive) // isActive 상태 조작은 대기열 활성화 시점과는 별개
+//                .map(Registration::getTopicName)
+//                .forEach(kafkaTopicManager::deleteTopic);
+    }
+
+    public void addUrlPartitionMapping(String targetUrl) {
+        Registration registration = registrationRepository.findByTargetUrl(targetUrl);
+        if (registration != null) {
+            partitionNoMapper.put(registration.getTargetUrl(), registration.getPartitionNo());
+        }
+    }
+
+    /**
+     * 대기열 실행 중 상태 변경 시, 호출 필요
+     */
+    public void activate(Registration registration) {
+        int partitionNo = registration.getPartitionNo();
+        activePartitions.add(partitionNo);
+        queues.put(partitionNo, new WaitingStatusDto(partitionNo, registration.getTargetUrl(), 0, 0));
+        // update mongodb data
+        registration.setIsActive(true);
+        registrationRepository.save(registration);
+        // re-init partition
+        consumerConnector.clearPartition(partitionNo);
+        log.info("activation end");
+    }
+
+    public void activate(int partitionNo) {
+        Registration registration = registrationRepository.findByPartitionNo(partitionNo);
+        activate(registration);
+    }
+
+    /**
+     * 대기열 실행 중 상태 변경 시, 호출 필요
+     * @param partitionNo
+     */
+    public void deactivate(int partitionNo) {
+        if (!activePartitions.contains(partitionNo)) {
+            return;
+        }
+        Registration registration = registrationRepository.findByPartitionNo(partitionNo);
+
+        activePartitions.remove(partitionNo);
+        queues.remove(partitionNo);
+
+        // update mongodb data
+        registration.setIsActive(false);
+        registrationRepository.save(registration);
+    }
+
+    public Object enter(HttpServletRequest request) {
+        String requestUrl = request.getRequestURL().toString();
+        log.info("requestUrl = {}", requestUrl);
+        int partitionNo = partitionNoMapper.get(requestUrl);
+
+        if (activePartitions.contains(partitionNo)) {
+            // 카프카에 요청자 Ip 저장
+            return enterProducer.send(extractClientIp(request), partitionNo);
+        }
+        // 대기열 비활성화 상태
+        Registration registration = registrationRepository.findByPartitionNo(partitionNo);
+        return targetApiConnector.forwardToTarget(registration.getTargetUrl(), request);
+
+    }
+
+    private String extractClientIp(HttpServletRequest request) {
+        // 요청이 프록시 등을 거쳤을 때, 원래 ip주소를 담는 헤더
+        String ip = request.getHeader("X-Forwarded-For");
+        log.info("client ip(X-Forwarded-For) = {}", ip);
+        if (ip != null) return ip;
+
+        String remoteAddr = request.getRemoteAddr();
+        log.info("request.remoteAddr = {}", remoteAddr);
+        return remoteAddr;
+    }
+
+    public void out(int partitionNo, Long order) {
         // outList는 '내 앞에 나간 사람 수' 를 알기 위해 쓰이므로, 정렬된 채로 유지
         try {
-
-            int insertIdx = - (Collections.binarySearch(outList, order) + 1);
+            List<Long> outList = queues.get(partitionNo).getOutList();
+            int insertIdx = -(Collections.binarySearch(outList, order) + 1);
             outList.add(insertIdx, order);
-            LinkedList<Integer> tl = new LinkedList<>();
-            int a = 1;
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-    public Object getMyOrder(Long oldOrder, String ip, HttpServletRequest request) {
-        // 변경된 로직
+    public Object getMyOrder(int partitionNo, Long oldOrder, String ip, HttpServletRequest request) {
+        WaitingStatusDto waitingStatus = queues.get(partitionNo);
+        Set<String> doneSet = waitingStatus.getDoneSet();
         if (doneSet.contains(ip)) {
             doneSet.remove(ip);
-            return targetApiConnector.forwardToTarget(request); // forwarding
+            return targetApiConnector.forwardToTarget(waitingStatus.getTargetUrl(), request); // forwarding
         }
+        List<Long> outList = waitingStatus.getOutList();
+        int lastOffset = waitingStatus.getLastOffset();
         int outCntInFront = - (Collections.binarySearch(outList, oldOrder) + 1);
-        Long myOrder = oldOrder - outCntInFront - batchLastIdx; // newOrder
-        return new GetMyOrderResDto(myOrder, totalQueueSize);
+        Long myOrder = oldOrder - outCntInFront - lastOffset; // newOrder
+        return new GetMyOrderResDto(myOrder, waitingStatus.getTotalQueueSize());
     }
-
-
-//    public ResponseEntity<?> test(HttpServletRequest request) {
-//        return targetApiConnector.forwardToTarget(request);
-//    }
 
     @Async
     @Scheduled(cron = "0/5 * * * * *") // 매 분 0초부터, 3초마다
     public void getNext() {
-        Map<String, Object> batchRes = consumerConnector.getNext(); // 대기 완료된 ip 목록을 가져온다.
+        try {
+            if (activePartitions.isEmpty()) {
+                return;
+            }
+            Map<Integer, BatchResDto> response = consumerConnector.getNext(activePartitions); // 대기 완료된 ip 목록을 가져온다.
+            System.out.println("response = " + response);
+            for (int partitionNo : response.keySet()) {
+                WaitingStatusDto waitingStatus = queues.get(partitionNo);
+                BatchResDto batchRes = response.get(partitionNo);
 
-        doneSet.addAll((List<String>)batchRes.get("curDoneSet"));
-//        System.out.println("doneSet = " + doneSet);
-
-        // 변경된 로직
-        batchLastIdx = (Integer) batchRes.get("batchLastIdx");
-        totalQueueSize = (Integer) batchRes.get("totalQueueSize");
-
-        cleanUpOutList(); // 대기 끝난 애들 빼기
+                waitingStatus.getDoneSet()
+                        .addAll(batchRes.getCurDoneList());
+                waitingStatus.setLastOffset(batchRes.getLastOffset());
+                waitingStatus.setTotalQueueSize(batchRes.getTotalQueueSize());
+            }
+            cleanUpOutList();
+        } catch (Exception e) {
+            System.out.println(activePartitions);
+            System.out.println(".");
+        }
     }
 
+    /**
+     * 대기 끝난 사람들 삭제
+     */
     private void cleanUpOutList() {
-        outList = outList.stream()
-                .filter(i -> i > batchLastIdx)
-                .collect(Collectors.toList());
+        for (int partitionNo : queues.keySet()) {
+            WaitingStatusDto waigtingStatus = queues.get(partitionNo);
+            int lastOffset = waigtingStatus.getLastOffset();
+            waigtingStatus.setOutList(
+                    waigtingStatus.getOutList().stream()
+                            .filter(i -> i > lastOffset)
+                            .toList()
+            );
+        }
     }
-
 }
